fix: issue with navigation

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,3 @@
-.w-100 {
-    width: 100%;
-}
 
 .flex {
     display: flex;
@@ -45,4 +42,10 @@
 
 .mb-4 {
     margin-bottom: 2rem;
+}
+
+// * done
+
+.w-100 {
+    width: 100%;
 }
