chore: improve login process

--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -2,6 +2,6 @@ $poppins: 'Poppins', sans-serif;
 $fira-sans: 'Fira Sans', sans-serif;
 
 $black: #141010;
-$white: #FFFFFF;
-$yellow: #F6F49D;
-$red: #FF4949;
+$white: #ffffff;
+$yellow: #f6f49d;
+$red: #ff4949;
