refactor: update picture form layout

--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -4,4 +4,7 @@ $fira-sans: 'Fira Sans', sans-serif;
 $black: #141010;
 $white: #ffffff;
 $yellow: #f6f49d;
-$red: #ff4949;
+
+$red: #eb5353;
+$green: #36ae7c;
+$blue: #187498;
